--- a/index.html
+++ b/index.html
@@ -39,18 +39,17 @@
       </nav>
     </div>
     <header class="header">
-      <div class="pre-header">
-        <div class="container">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Ações</a></li>
-            <li><a href="#">Utilidade Pública</a></li>
-            <li><a href="#">Aure3</a></li>
-          </ul>
-        </div>
-      </div>
+      <div class="pre-header"></div>
       <div class="container-header">
         <div class="header_acoes" id="header_acoes">
+          <div class="guia-botoes">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Ações</a></li>
+              <li><a href="#">Utilidade Pública</a></li>
+              <li><a href="#">Aure3</a></li>
+            </ul>
+          </div>
           <section class="logo">
             <img src="assets/img/petrobras.png" alt="" />
             <div class="info-logo">
@@ -59,11 +58,88 @@
             </div>
           </section>
         </div>
-        
+        <div class="header-logos" id="header-logos"></div>
       </div>
     </header>
+    <div class="container-cards">
+      <section id="cards">
+        <div class="card-cotacao">
+          <div class="card-header">
+            <div>
+              <span title="Cotação">Cotação</span>
+            </div>
+          </div>
+          <div class="card-body">
+            <div>
+              <span class="value">R$32,00</span>
+              <i class="fa-thin fa-question"></i>
+            </div>
+          </div>
+        </div>
+        <!-- --------------------- -->
+        <div class="card-variacao">
+          <div class="card-header">
+            <div>
+              <span title="Variação">Variação</span>
+            </div>
+          </div>
+          <div class="card-body">
+            <div>
+              <span class="value">R$32,00</span>
+              <i class="fa-thin fa-question"></i>
+            </div>
+          </div>
+        </div>
+        <!-- --------------------- -->
+        <div class="card-pl">
+          <div class="card-header">
+            <div>
+              <span title="P/L">P/L</span>
+            </div>
+          </div>
+          <div class="card-body">
+            <div>
+              <span class="value">R$32,00</span>
+              <i class="fa-thin fa-question"></i>
+            </div>
+          </div>
+        </div>
+        <!-- --------------------- -->
+        <div class="card-pvp">
+          <div class="card-header">
+            <div>
+              <span title="P/VP">P/VP</span>
+            </div>
+          </div>
+          <div class="card-body">
+            <div>
+              <span class="value">R$32,00</span>
+              <i class="fa-thin fa-question"></i>
+            </div>
+          </div>
+        </div>
+        <!-- --------------------- -->
+        <div class="card-dy">
+          <div class="card-header">
+            <div>
+              <span title="DY">DY</span>
+            </div>
+          </div>
+          <div class="card-body">
+            <div>
+              <span class="value">R$32,00</span>
+              <i class="fa-thin fa-question"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <main>
-      <p>Conteúdo da página vai aqui...</p>
+      <div class="conteudo-page">
+        <div class="grafico">
+          <img src="assets/img/grafico.jpg" alt="grafico bolsa petr4" />
+        </div>
+      </div>
     </main>
     <footer>
       <p>&copy; 2024 Tigrinho Invest</p>
