--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
           </div>
           <div class="card-body">
             <div>
-              <span class="value">97,50%</span>
               <i class="fa-solid fa-arrow-up" style="color: #63e6be"></i>
+              <span class="value">97,50%</span>
             </div>
           </div>
         </div>
@@ -181,36 +181,111 @@
           <div class="grafico">
             <div class="header-grafico">
               <div class="icone-graf" id="icone-graf">
-                <i class="fa-solid fa-diagram-project" style="color: #c0af59"></i>
+                <i
+                  class="fa-solid fa-diagram-project"
+                  style="color: #c0af59"
+                ></i>
                 <span>COTAÇÃO PETR4</span>
               </div>
             </div>
             <img src="assets/img/grafico.jpg" alt="grafico bolsa petr4" />
             <h4>
-              Se você tivesse investido R$ 1.000,00 (alterar) há 1 ano (alterar),
-              hoje você teria: R$ 1.973,89*
+              Se você tivesse investido R$ 1.000,00 (alterar) há 1 ano
+              (alterar), hoje você teria: R$ 1.973,89*
             </h4>
             <h6>*O valor considera o reinvestimento dos dividendos.</h6>
             <button class="comparar">
               COMPARAR COM OUTRAS EMPRESAS <i class="fa-solid fa-retweet"></i>
             </button>
           </div>
-        </section>
-        <section class="section">
-          <div class="conteudo-page">
-            <div class="grafico">
-              <div class="header-grafico">
-                <div class="icone-graf" id="icone-graf">
-                  <i class="fa-solid fa-diagram-project" style="color: #c0af59"></i>
-                  <span>HISTÓRICO DE DIVIDENDOS - PETR4</span>
-                </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="conteudo-page">
+          <div class="grafico">
+            <div class="header-grafico">
+              <div class="icone-graf" id="icone-graf">
+                <i
+                  class="fa-solid fa-diagram-project"
+                  style="color: #c0af59"
+                ></i>
+                <span>HISTÓRICO DE DIVIDENDOS - PETR4</span>
               </div>
-              <img src="assets/img/grafico-torre.jpg" alt="grafico bolsa petr4" />
-              
             </div>
-          </section>
-
-      </div>
+            <img src="assets/img/grafico-torre.jpg" alt="grafico bolsa petr4" />
+            <table class="tabela" border="">
+              <thead>
+                <th>TIPO</th>
+                <th>DATA COM</th>
+                <th>PAGAMENTO</th>
+                <th>VALOR</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Dividendos</td>
+                  <td>25/04/2024</td>
+                  <td>20/05/2024</td>
+                  <td>0,54947422</td>
+                </tr>
+                <tr>
+                  <td>Dividendos</td>
+                  <td>25/04/2024</td>
+                  <td>20/06/2024</td>
+                  <td>0,54947422</td>
+                </tr>
+                <tr>
+                  <td>Dividendos</td>
+                  <td>21/11/2023</td>
+                  <td>20/03/2024</td>
+                  <td>0,67267350</td>
+                </tr>
+                <tr>
+                  <td>Dividendos</td>
+                  <td>21/11/2023</td>
+                  <td>20/02/2024</td>
+                  <td>0,67267350</td>
+                </tr>
+                <tr>
+                  <td>JSCP</td>
+                  <td>21/11/2023</td>
+                  <td>20/02/2024</td>
+                  <td>0,42938680</td>
+                </tr>
+                <tr>
+                  <td>JSCP</td>
+                  <td>21/08/2023</td>
+                  <td>21/11/2023</td>
+                  <td>0,36547600</td>
+                </tr>
+                <tr>
+                  <td>Dividendos</td>
+                  <td>21/08/2023</td>
+                  <td>15/12/2023</td>
+                  <td>0,57465200</td>
+                </tr>
+                <tr>
+                  <td>Dividendos</td>
+                  <td>21/08/2023</td>
+                  <td>21/11/2023</td>
+                  <td>0,20917600</td>
+                </tr>
+                <tr>
+                  <td>JSCP</td>
+                  <td>12/06/2023</td>
+                  <td>18/08/2023</td>
+                  <td>0,66860900</td>
+                </tr>
+                <tr>
+                  <td>Dividendos</td>
+                  <td>12/06/2023</td>
+                  <td>18/08/2023</td>
+                  <td>0,27817900</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <p>&copy; 2024 Tigrinho Invest</p>
